druid-mt-emitter configs