@@ -1,14 +1,9 @@
 -server
--Xmx24g
--Xms24g
--XX:NewSize=256m
--XX:MaxNewSize=256m
--XX:+UseConcMarkSweepGC
+-Xmx13g
+-Xms13g
+-verbose:gc
 -XX:+PrintGCDetails
 -XX:+PrintGCTimeStamps
--XX:+UseLargePages
--XX:+HeapDumpOnOutOfMemoryError
--XX:HeapDumpPath=/var/galaxy/deploy/current/
 -Duser.timezone=UTC
 -Dfile.encoding=UTF-8
 -Djava.io.tmpdir=var/tmp
